:sparkles: Added or completed tests for the FileAuthenticator DAOConfig and DAOUser classes, created the MANIFEST.MF file, improved the UI accessibility, corrected small mistakes and fixed some compiler errors